--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-log.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-log.html
@@ -62,37 +62,37 @@
                     }
                 </script>
 
-                <div class="row">
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-                            <th scope="row"></th>
-                            <th scope="row"></th>
-                            <th scope="row"></th>
-                            <th scope="row"></th>
-                            <th scope="row"></th>
-                            <th scope="row"></th>
+<!--                <div class="row">-->
+<!--                    <table class="table table-striped">-->
+<!--                        <thead>-->
+<!--                        <tr>-->
+<!--                            <th scope="row"></th>-->
+<!--                            <th scope="row"></th>-->
+<!--                            <th scope="row"></th>-->
+<!--                            <th scope="row"></th>-->
+<!--                            <th scope="row"></th>-->
+<!--                            <th scope="row"></th>-->
 
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
-                        </tr>
-                        <tr>
-                            <th scope="col">NO</th>
-                            <th class="col" name="bwCode">부품</th>
-                            <th class="col" name="incomeBox">BOX</th>
-                            <th class="col" name="incomeQuantity">수량</th>
-                            <th class="col" name="">공급자 코드</th>
-                            <th class="col">발주 번호</th>
-                            <th class="col">수량</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
+<!--                            <td colspan="2">Larry the Bird</td>-->
+<!--                            <td>@twitter</td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <th scope="col">NO</th>-->
+<!--                            <th class="col" name="bwCode">부품</th>-->
+<!--                            <th class="col" name="incomeBox">BOX</th>-->
+<!--                            <th class="col" name="incomeQuantity">수량</th>-->
+<!--                            <th class="col" name="">공급자 코드</th>-->
+<!--                            <th class="col">발주 번호</th>-->
+<!--                            <th class="col">수량</th>-->
+<!--                        </tr>-->
+<!--                        </thead>-->
+<!--                        <tbody>-->
+<!--                        <tr>-->
 
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+<!--                        </tr>-->
+<!--                        </tbody>-->
+<!--                    </table>-->
+<!--                </div>-->
 
 
             </div>
