--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
@@ -6,10 +6,10 @@
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
-        <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
+        <div class="sidebar-brand-icon">
+            UNION
         </div>
-        <div class="sidebar-brand-text mx-3">LTL</div>
+<!--        <div class="sidebar-brand-text mx-3"></div>-->
     </a>
 
     <!-- 구분선 -->
