수동 납품 재수정

--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing-manual.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing-manual.html
@@ -249,6 +249,7 @@
                                     reportRequest();
                                 } else {
                                     alert("전송 오류! 다시 해보세요")
+                                    location.reload();
                                 }
                             }
                         );
