--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-manage.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-manage.html
@@ -38,7 +38,8 @@
                     <div class="col-1 input-group">
                         <select class="custom-select" id="kindSelect">
                             <option selected value="income">입고</option>
-                            <option value="modify">보정</option>
+                            <option value="modify">수정</option>
+                            <option value="defective">불량</option>
                         </select>
                     </div>
                     <div class="col-1 input-group">
@@ -55,7 +56,9 @@
                         <input type="text" class="form-control" id="dateInput" placeholder="YYYYMMDD">
                     </div>
                     <div class="col-1">
-                        <button type="button" class="btn btn-primary btn-sm" onclick="clickConfirmButton()">확인</button>
+                        <button type="button" id="dataInputButton" class="btn btn-primary btn-sm"
+                                onclick="clickConfirmButton()">확인
+                        </button>
                     </div>
                 </div>
 
@@ -63,6 +66,7 @@
                     let kind
                     let date;
                     let orderSeq;
+                    let checkPass = true;
 
                     window.onload = function () {
                         let today = new Date();
@@ -83,11 +87,22 @@
                         if (kind == "" || date == "" || orderSeq == "") {
                             alert("모두 입력해주세요")
                         } else {
+                            let message;
+                            if (kind == "modify") {
+                                message = `구분 : 수정\n` + `차수 : ${orderSeq}차\n` + `날짜 : ${date}`;
+                            } else if (kind == "income") {
+                                message = `구분 : 입고\n` + `차수 : ${orderSeq}차\n` + `날짜 : ${date}`;
+                            } else if (kind == "defective"){
+                                message = `구분 : 불량`;
+                            }
+                            confirm(message);
                             disableElement(kindElement);
                             disableElement(orderElement);
                             disableElement(dateElement);
                             let target = document.getElementById('excelRow');
                             target.style.visibility = "visible";
+                            target = document.getElementById('dataInputButton');
+                            target.style.visibility = "hidden";
                         }
                     }
 
@@ -108,7 +123,11 @@
                     <div class="col-2">
                         <button type="button" id="createButton" class="btn btn-primary" onclick="createTable()">확인
                         </button>
-                        <button type="button" id="checkButton" style="visibility: hidden" class="btn btn-success" onclick="checkTable()">검사
+                        <button type="button" id="checkButton" style="visibility: hidden" class="btn btn-success"
+                                onclick="checkPart()">검사
+                        </button>
+                        <button type="button" id="submitButton" style="visibility: hidden" class="btn btn-success"
+                                onclick="checkPart()">전송
                         </button>
                     </div>
                 </div>
@@ -130,14 +149,14 @@
                                         break;
                                     }
                                     excelMemory.push({
-                                        companyName : null,
-                                        spCode: null,
-                                        poCode: null,
-                                        name: null,
-                                        check: null,
+                                        companyName: "",
+                                        spCode: "",
+                                        poCode: "",
+                                        name: "",
+                                        check: "",
                                         bwCode: temp[Object.keys(temp)[0]],
                                         lot: temp[Object.keys(temp)[1]],
-                                        quantity: temp[Object.keys(temp)[2]] * 1,
+                                        quantity: temp[Object.keys(temp)[2]] * 1
                                     });
                                 }
                             }
@@ -147,6 +166,7 @@
 
                     function createTable() {
                         const tbody = document.getElementById('partTable');
+                        removeChildNode(tbody);
                         for (let i = 0; i < excelMemory.length; i++) {
                             let tr = document.createElement("tr");
                             let temp = excelMemory[i];
@@ -158,6 +178,10 @@
                                 + `<td>` + temp.lot + `</td>`
                                 + `<td>` + temp.quantity + `</td>`
                                 + `<td>` + temp.check + `</td>`;
+                            if (temp.check == "N") {
+                                tr.className = "table-danger";
+                                checkPass = false;
+                            }
                             tbody.append(tr);
                         }
                         let target = document.getElementById('excelInput');
@@ -166,6 +190,38 @@
                         target.disabled = true;
                         target = document.getElementById('checkButton');
                         target.style.visibility = "visible";
+                    }
+
+                    function checkPart() {
+                        const url = "/api/task/part-manage/check";
+                        fetch(url, {
+                            headers: {
+                                "Content-Type": "application/json",
+                            },
+                            method: "POST",
+                            body: JSON.stringify(excelMemory)
+                        }).then(
+                            response => {
+                                if (response.status == 200) {
+                                    response.json().then(data => {
+                                        if(checkPass){
+                                            let target1 = document.getElementById("submitButton");
+                                            target1.style.visibility = "visible";
+                                        }else{
+                                            alert("자재 파일을 수정해주세요");
+                                        }
+                                        excelMemory = data;
+                                        createTable();
+                                        let target2 = document.getElementById("checkButton");
+                                        target2.disabled = true;
+                                    });
+                                }
+                            }
+                        );
+                    }
+
+                    function submit(){
+
                     }
                 </script>
 
@@ -182,7 +238,6 @@
                                 <th class="col-1">로트</th>
                                 <th class="col-1">수량</th>
                                 <th class="col-1"></th>
-
                             </tr>
                             </thead>
                             <tbody id="partTable">
@@ -192,7 +247,6 @@
                 </div>
             </div>
             <!-- /.container-fluid -->
-
         </div>
         <!-- End of Main Content -->
 
